--- a/profildiri3.html
+++ b/profildiri3.html
@@ -255,7 +255,7 @@
 
     <section id="biodata">
       <h2>Biodata</h2>
-      <img src="alvon.jpg" alt="Foto Profil" width="155" height="180">
+      <img src="alvon.jpg" alt="Foto Profil" width="155" height="auto">
       <p><b>Nama:</b> Junior Alvon Praditia Dinata</p>
       <p><b>Alamat:</b> Denpasar, Bali</p>
       <p><b>Email:</b> alvon.junior09@gmail.com</p>
@@ -332,3 +332,4 @@
     </footer>
   </body>
 </html>
+
